--- a/style.css
+++ b/style.css
@@ -1,30 +1,134 @@
 :root{
-    background-color: #b9936c;
+    --clr-background: #b9936c;
+    --clr-box: #c4b7a6;
 }
-.nav-list {
-    background:#c4b7a6;
-    box-shadow: 0px 0px 10px;
-    padding: 20px;
-    display: flex;
-    justify-content: flex;
-    align-items: center;
-}
-.nav-item {
-    list-style: none;
-    margin-right: auto;
-    margin-left: auto;
-}
-.nav-item a {
+
+*,*::before, *::after {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
     text-decoration: none;
-    color: black;
-    transition: all 200ms ease-in;
+    list-style: none;
 }
-.cont{
-    margin: 0 auto;
-    max-width: 800px;
-    height: 100%;
+
+body{
+    font-weight: 400;
+    font-size: 1.3125rem;
+    line-height: 1.6;
+    background-color: var(--clr-background);
+}
+
+h1, h2, h3, body, p {
+    margin: 0;
+}
+
+h1, h2, h3{
+    font-weight: 900;
+    margin-bottom: 1em;
+}
+
+section{
+    padding: 3rem 0;
+}
+
+.container{
+    margin-inline: auto;
+    width: min(90%, 70.5rem);
+}
+
+.box{
+padding: 0;
+margin: 0 auto;
+width: 35%;
+border: 3px solid black;
+background-color: var(--clr-box);
+box-shadow: 0px 0px 10px;
+}
+body{
+    font-family: montserrat;
+}
+nav{
+    border: 3px solid black;
+    background-color: var(--clr-box);
     box-shadow: 0px 0px 10px;
-    padding: 20px;
-    background-color: #c4b7a6;
+    height: 80px;
+    width: 100%;
+}
+label.logo{
+    color: #6B7528;
+    font-size: 35px;
+    line-height: 80px;
+    padding: 0 100px;
+    font-weight: bold;
+}
+nav ul{
+    float: right;
+    margin-right: 20px;
+}
+nav ul li{
+    display: inline-block;
+    line-height: 80px;
+    margin: 0 5px;
+}
+nav ul li a{
+    color:rgb(92, 34, 90);
+    font-size: 17px;
+    padding: 7px 13px;
     border-radius: 3px;
+    text-transform: uppercase;
+}
+a:hover{
+    background: #b9936c;
+    transition: .5s;
+}
+.checkbtn{
+    font-size: 30px;
+    color: white;
+    float: right;
+    line-height: 80px;
+    margin-right: 40px;
+    cursor: pointer;
+    display: none;
+}
+#check{
+    display: none;
+}
+@media (max-width: 952px){
+    label.logo{
+        font-size: 30px;
+        padding-left: 50px;
+    }
+    nav ul li a{
+        font-size: 16px;
+    }
+}
+@media (max-width: 858px){
+    .checkbtn{
+        display: block;
+    }
+    ul{
+        position: fixed;
+        width: 100%;
+        height: 100vh;
+        background: var(--clr-box);
+        top: 80px;
+        left: -100%;
+        text-align: center;
+        transition: all .5s;
+    }
+    nav ul li{
+        display: block;
+        margin: 50px 0;
+        line-height: 30px;
+    }
+    nav ul li a{
+        font-size: 20px;
+    }
+    a:hover{
+        background: none;
+        color:#b9936c;
+    }
+    #check:checked ~ ul{
+        left: 0;
+    }
 }
