--- a/css/index.css
+++ b/css/index.css
@@ -37,16 +37,18 @@ section{
 }
 
 .box{
-padding: 0;
-margin: 0 auto;
-width: 35%;
-border: 3px solid black;
-background-color: var(--clr-box);
-box-shadow: 0px 0px 10px;
-}
+    padding: 0;
+    margin: 0 auto;
+    width: 35%;
+    border: 3px solid black;
+    background-color: var(--clr-box);
+    box-shadow: 0px 0px 10px;
+    }
+
 body{
     font-family: montserrat;
 }
+
 nav{
     border: 3px solid black;
     background-color: var(--clr-box);
@@ -54,6 +56,7 @@ nav{
     height: 80px;
     width: 100%;
 }
+
 label.logo{
     color: #6B7528;
     font-size: 35px;
@@ -61,15 +64,18 @@ label.logo{
     padding: 0 100px;
     font-weight: bold;
 }
+
 nav ul{
     float: right;
     margin-right: 20px;
 }
+
 nav ul li{
     display: inline-block;
     line-height: 80px;
     margin: 0 5px;
 }
+
 nav ul li a{
     color:rgb(92, 34, 90);
     font-size: 17px;
@@ -77,10 +83,12 @@ nav ul li a{
     border-radius: 3px;
     text-transform: uppercase;
 }
+
 a:hover{
-    background: #b9936c;
+    background: var(--clr-background);
     transition: .5s;
 }
+
 .checkbtn{
     font-size: 30px;
     color: white;
@@ -90,9 +98,11 @@ a:hover{
     cursor: pointer;
     display: none;
 }
+
 #check{
     display: none;
 }
+
 @media (max-width: 952px){
     label.logo{
         font-size: 30px;
@@ -102,6 +112,7 @@ a:hover{
         font-size: 16px;
     }
 }
+
 @media (max-width: 858px){
     .checkbtn{
         display: block;
@@ -126,9 +137,14 @@ a:hover{
     }
     a:hover{
         background: none;
-        color:#b9936c;
+        color:var(--clr-background);
     }
     #check:checked ~ ul{
         left: 0;
     }
+}
+@media (max-width: 360px){
+    .box{
+        width: 90%;
+        }
 }
