--- a/css/contact.css
+++ b/css/contact.css
@@ -1,32 +1,32 @@
-input, textarea {
-    width: calc(100% - 18px);
-    padding: 8px;
-    margin-bottom: 20px;
-    border: 1px solid black;
-    outline: none;
+input,
+textarea {
+  width: calc(100% - 18px);
+  padding: 8px;
+  margin-bottom: 20px;
+  border: 1px solid black;
+  outline: none;
 }
 
 input::placeholder {
-    color: #666;
+  color: #666;
 }
 
 button {
-    width: 100%;
-    padding: 10px;
-    border: none;
-    background: var(--clr-background); 
-    font-size: 16px;
-    font-weight: 400;
-    color:black;
+  width: 100%;
+  padding: 10px;
+  border: none;
+  background: var(--clr-background);
+  font-size: 16px;
+  font-weight: 400;
+  color: black;
 }
 
 button:hover {
-    background: #ad6a06;
-}  
-
-.reset{
-    width: 50%;
-    margin: 0 auto;
-    display: block;
+  background: #ad6a06;
 }
 
+.reset {
+  width: 50%;
+  margin: 0 auto;
+  display: block;
+}
