--- a/css/index.css
+++ b/css/index.css
@@ -1,137 +1,152 @@
-:root{
-    --clr-background: #b9936c;
-    --clr-box: #c4b7a6;
+:root {
+  --clr-background: #b9936c;
+  --clr-box: #c4b7a6;
 }
 
-*,*::before, *::after {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-    text-decoration: none;
-    list-style: none;
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  text-decoration: none;
+  list-style: none;
 }
 
-body{
-    font-weight: 400;
-    font-size: 1.3125rem;
-    line-height: 1.6;
-    background-color: var(--clr-background);
-    font-family: montserrat;
+body {
+  font-weight: 400;
+  font-size: 1.3125rem;
+  line-height: 1.6;
+  background-color: var(--clr-background);
+  font-family: montserrat;
 }
 
-h1, h2, h3, body, p {
-    margin-bottom: 1em;
+h1,
+h2,
+h3,
+body,
+p {
+  margin-bottom: 1em;
 }
 
-section{
-    padding: 3rem 0;
+section {
+  padding: 3rem 0;
 }
 
-.container{
-    margin-inline: auto;
-    width: min(90%, 70.5rem);
+.container {
+  margin-inline: auto;
+  width: min(90%, 70.5rem);
 }
 
-.box{
-    padding: 0;
-    margin: 0 auto;
-    width: 35%;
-    border: 3px solid black;
-    background-color: var(--clr-box);
-    box-shadow: 0px 0px 10px;
-    }
-
-nav{
-    border: 3px solid black;
-    background-color: var(--clr-box);
-    box-shadow: 0px 0px 10px;
-    height: 80px;
-    width: 100%;
+.box {
+  padding: 0;
+  margin: 0 auto;
+  width: 35%;
+  border: 3px solid black;
+  background-color: var(--clr-box);
+  box-shadow: 0px 0px 10px;
 }
 
-label.logo{
-    color: #6B7528;
-    font-size: 35px;
-    line-height: 80px;
-    padding: 0 100px;
-    font-weight: bold;
+nav {
+  border: 3px solid black;
+  background-color: var(--clr-box);
+  box-shadow: 0px 0px 10px;
+  height: 80px;
+  width: 100%;
 }
 
-nav ul{
-    float: right;
-    margin-right: 20px;
+label.logo {
+  color: #6b7528;
+  font-size: 35px;
+  line-height: 80px;
+  padding: 0 100px;
+  font-weight: bold;
 }
 
-nav ul li{
-    display: inline-block;
-    line-height: 80px;
-    margin: 0 5px;
+nav ul {
+  float: right;
+  margin-right: 20px;
 }
 
-nav ul li a{
-    color:rgb(92, 34, 90);
-    font-size: 17px;
-    padding: 7px 13px;
-    border-radius: 3px;
-    text-transform: uppercase;
+nav ul li {
+  display: inline-block;
+  line-height: 80px;
+  margin: 0 5px;
 }
 
-a:hover{
-    background: var(--clr-background);
-    transition: .5s;
+nav ul li a {
+  color: rgb(92, 34, 90);
+  font-size: 17px;
+  padding: 7px 13px;
+  border-radius: 3px;
+  text-transform: uppercase;
 }
 
-.checkbtn{
+a:hover {
+  background: var(--clr-background);
+  transition: 0.5s;
+}
+
+.ham {
+  display: none;
+}
+
+@media (max-width: 900px) {
+  label.logo {
     font-size: 30px;
-    color: white;
-    float: right;
-    line-height: 80px;
-    margin-right: 40px;
+    padding-left: 50px;
+  }
+
+  .ham {
+    position: fixed;
+    z-index: 100;
+    top: 1rem;
+    right: 1rem;
+    width: 3rem;
+    height: 3rem;
+    border: black solid 1px;
+    background: var(--clr-box);
     cursor: pointer;
+    display: block;
+  }
+
+  .xIcon {
     display: none;
+  }
+
+  .menu {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    height: 20%;
+    background: var(--clr-box);
+    transform: translateY(-100%);
+    transition: transform 0.2s;
+    list-style: none;
+    padding-top: 4rem;
+  }
+
+  .showMenu {
+    transform: translateY(0);
+  }
+
+  ul {
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    background: var(--clr-box);
+    top: 80px;
+    left: -100%;
+    text-align: center;
+    transition: all 0.5s;
+  }
 }
 
-#check{
-    display: none;
-}
-
-@media (max-width: 858px){
-    label.logo{
-        font-size: 30px;
-        padding-left: 50px;
-    }
-    .checkbtn{
-        display: block;
-    }
-    ul{
-        position: fixed;
-        width: 100%;
-        height: 100vh;
-        background: var(--clr-box);
-        top: 80px;
-        left: -100%;
-        text-align: center;
-        transition: all .5s;
-    }
-    nav ul li{
-        display: block;
-        margin: 50px 0;
-        line-height: 30px;
-    }
-    nav ul li a{
-        font-size: 20px;
-    }
-    a:hover{
-        background: none;
-        color:var(--clr-background);
-    }
-    #check:checked ~ ul{
-        left: 0;
-    }
-}
-
-@media (max-width: 360px){
-    .box{
-        width: 90%;
-        }
+@media (max-width: 900px) {
+  .box {
+    width: 90%;
+  }
 }
